--- a/style.css
+++ b/style.css
@@ -1,3 +1,53 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
 body{
   font-family: "Montserrat";
   text-align: center;
@@ -12,6 +62,7 @@ body{
 }
 .navbar{
   padding: 3% 7%;
+
 }
 .nav-item{
   padding:0 18px;
@@ -32,12 +83,16 @@ h2{
   padding-bottom: 3%;
 }
 .heading{
-  background-color: #f8fc03;
+  background-color: #fcff4d;
+}
+.beelogo{
+  width: 20%;
+  background-color: #fcff4d;
 }
 
 /* Technologies */
 #tech{
-  background-color: white;
+  background-color: #fffee8;
 
 }
 .tech-box{
@@ -50,5 +105,10 @@ h2{
   color: #bfad0d;
 }
 p{
-  font-family: "ubuntu Condensed"
+  font-family: "ubuntu Condensed";
+  padding: 3% 0;
+}
+h3{
+  font-weight: bold;
+  font-size: 1.5rem;
 }
