--- a/style.css
+++ b/style.css
@@ -68,27 +68,30 @@ h1{
   font-size: 5.5rem;
   font-family: "Ubuntu Condensed";
 
+
 }
 h2{
   padding: 3%;
   font-size: 2.5rem;
-}
+color: #807F6E;
+	 }
 
 .sub-title{
   font-size: 2.0rem;
   padding-bottom: 3%;
 }
 .heading{
-  background-color: #fcff4d;
+  background-color: #FFF994;
 }
 .beelogo{
   width: 20%;
-  background-color: #fcff4d;
+  background-color: #FFF994;
 }
 
 /* Technologies */
 #tech{
-  background-color: #fffee8;
+  background-color: #FFFDDB;
+	padding-bottom: 3%;
 
 }
 .tech-box{
@@ -109,6 +112,25 @@ h3{
   font-size: 1.5rem;
 }
 
+/* Web-Tech */
+#web-tech{
+	padding-bottom: 7%;
+}
+.http-icon{
+	width: 45%;
+}
+.www-icon{
+	width:30%;
+	padding-bottom: 10px;
+}
+.hosting-icon{
+		width:30%;
+}
+.web-heading{
+	padding-bottom: 7%;
+	line-height: 1.5;
+}
+
 /* Footer */
 
 .icon-footer{
@@ -121,4 +143,9 @@ color: black;
 }
 .copyright{
 	padding: 3%;
+}
+@media only screen and (max-width: 996px){
+	.http-icon,.www-icon,.hosting.com{
+		width:20%;
+	}
 }
