2 more pages done
core technologies page and web application pages done. blog page added too

--- a/style.css
+++ b/style.css
@@ -136,6 +136,13 @@ h3{
 .web-box{
 	padding-bottom: 5%;
 }
+.tech-sub{
+	padding: 0 15%;
+}
+.core{
+	font-weight: bold;
+	letter-spacing: 5px;
+}
 
 /* Design */
 
@@ -167,17 +174,34 @@ color: black;
 /* KEY TECH PAGE */
 .lang{
 	font-size: 1.5rem;
-	padding:2%;
+	padding:4%;
 }
 .lang-p{
 	padding: 0 3%;
-	
-
 }
-.markup, .ptag{
+.lang-p2{
+	padding-top: 15%;
+}
+.lang-html{
+	padding-top: 15%;
+}
+.ptag{
 	width: 20%;
 }
-
+.markup{
+	width: 10%;
+}
+#languages, #webtech{
+	padding: 3% 15%;
+}
+/* WEB TECHNOLGIES PAGE */
+.list{
+	max-width: 400px;
+	margin:auto;
+}
+.list-items{
+	padding-bottom: 3%;
+}
 
 @media only screen and (max-width: 996px){
 	.web{
@@ -186,7 +210,16 @@ color: black;
 	.des{
 padding-bottom: 3%;
 	}
-	.markup, .ptag{
-		width:40%;
+.ptag{
+		width:100%;
 	}
+.lang-html{
+	padding-top: 3%;
+}
+.markup{
+	width:100%;
+}
+.lang-p2{
+	padding-top: 3%
+}
 }
