--- a/style.css
+++ b/style.css
@@ -65,6 +65,9 @@ body{
 .nav-item{
   padding:0 18px;
 }
+.nav-link{
+	color: #FFF;
+}
 /* Heading */
 h1{
   font-size: 5.5rem;
@@ -191,7 +194,7 @@ color: black;
 .markup{
 	width: 10%;
 }
-#languages, #webtech, #design2{
+#languages, #webtech, #design2, .blog-main{
 	padding: 3% 15%;
 }
 /* WEB TECHNOLGIES PAGE */
@@ -265,7 +268,11 @@ margin:auto;
 	font-size: 14px;
 	transition: all 0.5s ease;
 }
-
+/* BLOG */
+.blog-main p{
+	padding-bottom: 2px;
+	text-align: justify;
+}
 @media only screen and (max-width: 996px){
 	.web{
 		padding-bottom: 3%;
